feat(firewall): integrate additional DNS blocklists for enhanced spam protection
Integrate real-time XMPP blocklists and additional threat intelligence sources into the firewall configuration to enhance spam protection. This includes adding checks against xmppbl.org, sbl.spamhaus.org, and pbl.spamhaus.org. These changes aim to improve the server's ability to block known spam sources and comply with the XMPP Safeguarding Manifesto.

feat(security): update security configurations for XMPP Safeguarding Manifesto compliance

Update security configurations to align with the XMPP Safeguarding Manifesto. This includes adding SASL mechanisms with channel binding support, updating TLS configurations to support TLS 1.3, and setting stanza size limits. These changes enhance the security posture of the XMPP server by ensuring modern encryption standards and compliance with recommended security practices.

docs: add comprehensive DNS security setup guide

Introduce a new DNS Security Setup Guide to document the required DNS security measures, including DNSSEC, CAA, and TLSA records. This guide provides detailed steps for configuring these records to comply with the XMPP Safeguarding Manifesto, ensuring secure and authenticated DNS responses.

chore: update example environment and quick start documentation

Update the example environment file and quick start guide to reflect new configuration options and recommendations. This includes stanza size limits and additional system requirements for different server scales. These updates aim to provide clearer guidance for setting up and configuring the XMPP server.

docs: add XMPP Safeguarding Manifesto compliance checklist

Create a compliance checklist to evaluate the current server configuration against the XMPP Safeguarding Manifesto. This checklist helps identify areas of compliance, partial implementation, and missing requirements, providing a roadmap for achieving full compliance.

style: remove trailing whitespace in scripts for

--- a/examples/env.example
+++ b/examples/env.example
@@ -69,6 +69,10 @@ PROSODY_C2S_BURST=25kb
 PROSODY_S2S_RATE=30kb/s
 PROSODY_S2S_BURST=100kb
 
+# Stanza size limits (XMPP Safeguarding Manifesto compliance)
+PROSODY_C2S_STANZA_LIMIT=262144
+PROSODY_S2S_STANZA_LIMIT=524288
+
 # Garbage collection settings
 PROSODY_GC_MODE=incremental
 PROSODY_GC_THRESHOLD=150
