feat: align module organization with official Prosody documentation
- Reorganize modules by official status instead of stability levels
- Separate core, official, and community modules clearly
- Update environment variables to reflect new organization
- Move configuration files to new directory structure
- Create comprehensive alignment documentation
- Update README and examples to match new organization

BREAKING CHANGE: Module organization changed from stability-based to official status-based
- PROSODY_ENABLE_MODERN removed (integrated into PROSODY_ENABLE_OFFICIAL)
- PROSODY_ENABLE_HTTP removed (integrated into official modules)
- PROSODY_ENABLE_ADMIN removed (integrated into official modules)
- PROSODY_ENABLE_BETA now defaults to false (was true)
- Directory structure changed from modules.d/{stable,beta,alpha} to modules.d/{official,community/{stable,beta,alpha}}

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,14 +22,15 @@ services:
       - PROSODY_DOMAIN=${PROSODY_DOMAIN:-localhost}
       - PROSODY_ADMINS=${PROSODY_ADMINS:-admin@localhost}
 
-      # Security settings (enabled by default)
+      # Stability-based module controls
       - PROSODY_ENABLE_SECURITY=${PROSODY_ENABLE_SECURITY:-true}
       - PROSODY_ENABLE_MODERN=${PROSODY_ENABLE_MODERN:-true}
+      - PROSODY_ENABLE_BETA=${PROSODY_ENABLE_BETA:-true}
+      - PROSODY_ENABLE_ALPHA=${PROSODY_ENABLE_ALPHA:-false}
 
       # Optional features
       - PROSODY_ENABLE_HTTP=${PROSODY_ENABLE_HTTP:-false}
       - PROSODY_ENABLE_ADMIN=${PROSODY_ENABLE_ADMIN:-false}
-      - PROSODY_ENABLE_ENTERPRISE=${PROSODY_ENABLE_ENTERPRISE:-false}
 
       # Registration settings
       - PROSODY_ALLOW_REGISTRATION=${PROSODY_ALLOW_REGISTRATION:-false}
