--- a/examples/env.example
+++ b/examples/env.example
@@ -12,23 +12,20 @@ PROSODY_DOMAIN=example.com
 PROSODY_ADMINS=admin@example.com,support@example.com
 
 # ============================================================================
-# FEATURE TOGGLES
+# MODULE CONFIGURATION (ORGANIZED BY OFFICIAL STATUS)
 # ============================================================================
 
-# Security features (recommended: true)
+# Official modules - distributed with Prosody (recommended: true)
+PROSODY_ENABLE_OFFICIAL=true
+
+# Community security modules - stable third-party (recommended: true)
 PROSODY_ENABLE_SECURITY=true
 
-# Modern XMPP features (recommended: true)
-PROSODY_ENABLE_MODERN=true
+# Community beta modules - mostly stable with some edge cases (recommended: false)
+PROSODY_ENABLE_BETA=false
 
-# HTTP services (BOSH, WebSocket, file upload)
-PROSODY_ENABLE_HTTP=false
-
-# Administration interface
-PROSODY_ENABLE_ADMIN=false
-
-# Enterprise features (monitoring, compliance)
-PROSODY_ENABLE_ENTERPRISE=false
+# Community alpha/experimental modules - use with caution (recommended: false)
+PROSODY_ENABLE_ALPHA=false
 
 # ============================================================================
 # REGISTRATION SETTINGS
@@ -175,29 +172,27 @@ COMPOSE_PROFILES=
 
 # Personal Server (1-50 users)
 # PROSODY_STORAGE=sqlite
+# PROSODY_ENABLE_OFFICIAL=true
 # PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_MODERN=true
-# PROSODY_ENABLE_HTTP=false
+# PROSODY_ENABLE_BETA=false
 # PROSODY_C2S_RATE=5kb/s
 # PROSODY_C2S_BURST=15kb
 
 # Community Server (50-500 users)
 # PROSODY_STORAGE=sql
+# PROSODY_ENABLE_OFFICIAL=true
 # PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_MODERN=true
-# PROSODY_ENABLE_HTTP=true
-# PROSODY_ENABLE_ADMIN=true
+# PROSODY_ENABLE_BETA=true
 # PROSODY_C2S_RATE=10kb/s
 # PROSODY_C2S_BURST=25kb
 # COMPOSE_PROFILES=sql,cache
 
 # Enterprise Server (500+ users)
 # PROSODY_STORAGE=sql
+# PROSODY_ENABLE_OFFICIAL=true
 # PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_MODERN=true
-# PROSODY_ENABLE_HTTP=true
-# PROSODY_ENABLE_ADMIN=true
-# PROSODY_ENABLE_ENTERPRISE=true
+# PROSODY_ENABLE_BETA=true
+# PROSODY_ENABLE_ALPHA=false
 # PROSODY_C2S_RATE=50kb/s
 # PROSODY_C2S_BURST=100kb
 # PROSODY_LOG_FORMAT=json
