feat: enhance XMPP server with modern modules and XEP compliance
- Add comprehensive XEP analysis document with recommendations
- Implement user experience modules (avatar sync, chat state filtering, profile management)
- Add modern authentication support (SASL2, Bind2, fast auth, downgrade protection)
- Include compliance and standards modules (XMPP Compliance Suites 2023, service outage status)
- Enhance MUC with markers, mention notifications, and MAM hints
- Update environment configuration with new module options
- Reorganize module documentation to reflect new capabilities

Based on analysis of 100+ XEP implementations from prosody-modules project

--- a/examples/env.example
+++ b/examples/env.example
@@ -28,6 +28,83 @@ PROSODY_ENABLE_BETA=false
 PROSODY_ENABLE_ALPHA=false
 
 # ============================================================================
+# MODERN AUTHENTICATION (BETA MODULES)
+# ============================================================================
+
+# Enable SASL2 (XEP-0388: Extensible SASL Profile)
+PROSODY_ENABLE_SASL2=false
+
+# Enable Bind2 (XEP-0386: Bind 2)
+PROSODY_ENABLE_BIND2=false
+
+# Fast authentication tokens (XEP-0484: Fast Authentication Streamlining Tokens)
+PROSODY_SASL2_FAST_TOKENS=false
+
+# SASL downgrade protection (XEP-0474: SASL SCRAM Downgrade Protection)
+PROSODY_SASL_SSDP=true
+
+# Instant stream resumption (XEP-0397: Instant Stream Resumption)
+PROSODY_ENABLE_ISR=false
+
+# ============================================================================
+# USER EXPERIENCE ENHANCEMENTS
+# ============================================================================
+
+# Sync avatars between vCard and PEP (XEP-0084/0153)
+PROSODY_AVATAR_SYNC=true
+
+# Chat state filter timeout in seconds (XEP-0085)
+PROSODY_CHATSTATE_TIMEOUT=300
+
+# Respect message processing hints (XEP-0334)
+PROSODY_RESPECT_NO_STORE=true
+PROSODY_RESPECT_NO_COPY=true
+
+# Enhanced vCard support (XEP-0054/0292)
+PROSODY_VCARD4_SUPPORT=true
+PROSODY_PROFILE_PEP=true
+
+# ============================================================================
+# COMPLIANCE AND STANDARDS
+# ============================================================================
+
+# Enable XMPP Compliance Suites 2023 (XEP-0479)
+PROSODY_COMPLIANCE_2023=false
+
+# Automatic compliance testing
+PROSODY_COMPLIANCE_AUTO_TEST=false
+
+# Service outage status notifications (XEP-0455)
+PROSODY_SERVICE_OUTAGE_NOTIFICATIONS=false
+
+# Enhanced server information (XEP-0128)
+PROSODY_ENHANCED_SERVER_INFO=false
+
+# External service discovery (XEP-0215)
+PROSODY_ENABLE_EXTDISCO=false
+
+# ============================================================================
+# EXTERNAL SERVICES (for XEP-0215)
+# ============================================================================
+
+# STUN server configuration
+PROSODY_STUN_HOST=stun.example.com
+PROSODY_STUN_PORT=3478
+
+# TURN server configuration
+PROSODY_TURN_HOST=turn.example.com
+PROSODY_TURN_PORT=3478
+PROSODY_TURN_USERNAME=
+PROSODY_TURN_PASSWORD=
+
+# Server information fields
+PROSODY_SERVER_DESCRIPTION=Professional XMPP Server
+PROSODY_SERVER_LOCATION=Cloud
+PROSODY_ADMIN_CONTACT=admin@example.com
+PROSODY_OUTAGE_CONTACT=admin@example.com
+PROSODY_STATUS_URL=https://status.example.com
+
+# ============================================================================
 # REGISTRATION SETTINGS
 # ============================================================================
 
