refactor: align module organization with Prosody source structure
- Rename official/ to distributed/ to match Prosody terminology
- Update module categorization based on Prosody's autoload_modules
- Distinguish between core (autoloaded) and distributed (shipped) modules
- Update environment variable: PROSODY_ENABLE_OFFICIAL -> PROSODY_ENABLE_DISTRIBUTED
- Align documentation with Prosody's internal module structure
- Based on analysis of Prosody's modulemanager source code

--- a/examples/env.example
+++ b/examples/env.example
@@ -12,11 +12,11 @@ PROSODY_DOMAIN=example.com
 PROSODY_ADMINS=admin@example.com,support@example.com
 
 # ============================================================================
-# MODULE CONFIGURATION (ORGANIZED BY OFFICIAL STATUS)
+# MODULE CONFIGURATION (ORGANIZED BY SOURCE AND DISTRIBUTION)
 # ============================================================================
 
-# Official modules - distributed with Prosody (recommended: true)
-PROSODY_ENABLE_OFFICIAL=true
+# Distributed modules - shipped with Prosody (recommended: true)
+PROSODY_ENABLE_DISTRIBUTED=true
 
 # Community security modules - stable third-party (recommended: true)
 PROSODY_ENABLE_SECURITY=true
