fix: correct module categorization based on Prosody documentation
- Distinguish between core required modules and autoloaded modules
- Autoloaded modules (presence, message, iq, offline, s2s_auth_certs) can be disabled
- Core required modules (roster, saslauth, tls, etc.) cannot be disabled
- Add PROSODY_DISABLE_AUTOLOADED environment variable with warning
- Update documentation to reflect accurate Prosody behavior
- Based on official Prosody documentation showing presence can be disabled

--- a/examples/env.example
+++ b/examples/env.example
@@ -12,8 +12,12 @@ PROSODY_DOMAIN=example.com
 PROSODY_ADMINS=admin@example.com,support@example.com
 
 # ============================================================================
-# MODULE CONFIGURATION (ORGANIZED BY SOURCE AND DISTRIBUTION)
+# MODULE CONFIGURATION (ORGANIZED BY SOURCE AND REQUIREMENTS)
 # ============================================================================
+
+# Autoloaded modules - loaded by Prosody by default (recommended: false to disable)
+# WARNING: Disabling these may break basic XMPP functionality
+PROSODY_DISABLE_AUTOLOADED=false
 
 # Distributed modules - shipped with Prosody (recommended: true)
 PROSODY_ENABLE_DISTRIBUTED=true
