--- a/examples/env.example
+++ b/examples/env.example
@@ -12,15 +12,12 @@ PROSODY_DOMAIN=example.com
 PROSODY_ADMINS=admin@example.com,support@example.com
 
 # ============================================================================
-# MODULE CONFIGURATION (ORGANIZED BY SOURCE AND REQUIREMENTS)
+# MODULE CONFIGURATION (ORGANIZED BY SOURCE)
 # ============================================================================
 
-# Autoloaded modules - loaded by Prosody by default (recommended: false to disable)
-# WARNING: Disabling these may break basic XMPP functionality
-PROSODY_DISABLE_AUTOLOADED=false
-
-# Distributed modules - shipped with Prosody (recommended: true)
-PROSODY_ENABLE_DISTRIBUTED=true
+# Core modules - all modules shipped with Prosody (recommended: true)
+# Includes required, autoloaded, and distributed modules
+PROSODY_ENABLE_CORE=true
 
 # Community security modules - stable third-party (recommended: true)
 PROSODY_ENABLE_SECURITY=true
