style(config): reformat Apache and Nginx configuration files for consistency
Reformat the Apache and Nginx configuration files to improve readability
and maintain consistency across the configuration sections. This includes
aligning comments, removing unnecessary whitespace, and ensuring uniform
indentation. These changes enhance the maintainability of the configuration
files, making it easier for developers and administrators to understand
and modify the settings as needed.

--- a/examples/nginx-websocket.conf
+++ b/examples/nginx-websocket.conf
@@ -2,20 +2,18 @@
 # Based on official Prosody WebSocket documentation
 # Reference: https://prosody.im/doc/websocket
 
-# Upstream configuration for load balancing (optional)
-upstream prosody_http {
-    server 127.0.0.1:5280;
-    # Add more servers for load balancing:
-    # server 127.0.0.1:5281;
-    # server prosody2:5280;
-}
+# For load balancing with multiple servers, define an upstream block:
+# upstream prosody_http {
+#     server 127.0.0.1:5280;
+#     server 127.0.0.1:5281;
+# }
 
 # HTTP server (redirects to HTTPS)
 server {
     listen 80;
     listen [::]:80;
     server_name yourdomain.com;
-    
+
     # Redirect all HTTP to HTTPS
     return 301 https://$server_name$request_uri;
 }
@@ -29,12 +27,12 @@ server {
     # SSL/TLS Configuration
     ssl_certificate /path/to/your/certificate.crt;
     ssl_certificate_key /path/to/your/private.key;
-    
+
     # Modern SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
     ssl_prefer_server_ciphers off;
-    
+
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options nosniff always;
@@ -45,37 +43,37 @@ server {
     # ====================================================================
     location /xmpp-websocket {
         # Proxy to Prosody WebSocket endpoint
-        proxy_pass http://prosody_http/xmpp-websocket;
-        
+        proxy_pass http://127.0.0.1:5280/xmpp-websocket;
+
         # HTTP version for WebSocket
         proxy_http_version 1.1;
-        
+
         # WebSocket upgrade headers (REQUIRED)
         proxy_set_header Connection "Upgrade";
         proxy_set_header Upgrade $http_upgrade;
-        
+
         # CRITICAL: Headers for Prosody VirtualHost mapping and IP detection
-        proxy_set_header Host $host;                    # VirtualHost mapping (REQUIRED)
+        proxy_set_header Host $host; # VirtualHost mapping (REQUIRED)
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # Real IP detection
-        proxy_set_header X-Forwarded-Proto $scheme;    # Protocol detection
-        proxy_set_header X-Real-IP $remote_addr;       # Alternative real IP header
-        
+        proxy_set_header X-Forwarded-Proto $scheme; # Protocol detection
+        proxy_set_header X-Real-IP $remote_addr; # Alternative real IP header
+
         # CRITICAL: Timeouts MUST be > network_settings.read_timeout (840s)
         # Current Prosody network_settings.read_timeout: 840 seconds
         # These timeouts MUST be higher to prevent premature connection closure
-        proxy_read_timeout 900s;    # 15 minutes (MUST be > 840s)
-        proxy_send_timeout 900s;    # 15 minutes (MUST be > 840s)
-        proxy_connect_timeout 60s;  # Connection establishment timeout
-        
+        proxy_read_timeout 900s; # 15 minutes (MUST be > 840s)
+        proxy_send_timeout 900s; # 15 minutes (MUST be > 840s)
+        proxy_connect_timeout 60s; # Connection establishment timeout
+
         # WebSocket optimizations
-        proxy_buffering off;        # Disable buffering for real-time communication
-        proxy_cache off;           # Disable caching for WebSocket
+        proxy_buffering off; # Disable buffering for real-time communication
+        proxy_cache off; # Disable caching for WebSocket
         proxy_request_buffering off; # Disable request buffering
-        
+
         # Additional proxy settings
         proxy_redirect off;
         proxy_set_header X-Forwarded-Host $server_name;
-        
+
         # Optional: Add CORS headers if needed (security consideration)
         # add_header Access-Control-Allow-Origin "https://yourwebclient.com" always;
         # add_header Access-Control-Allow-Credentials true always;
@@ -87,17 +85,17 @@ server {
     location /http-bind {
         proxy_pass http://prosody_http/http-bind;
         proxy_http_version 1.1;
-        
+
         # Headers for BOSH
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # BOSH timeouts (should align with WebSocket timeouts)
         proxy_read_timeout 900s;
         proxy_send_timeout 900s;
         proxy_connect_timeout 60s;
-        
+
         # BOSH optimizations
         proxy_buffering off;
         proxy_cache off;
@@ -109,17 +107,17 @@ server {
     location /upload {
         proxy_pass http://prosody_http/upload;
         proxy_http_version 1.1;
-        
+
         # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # File upload timeouts and limits
-        proxy_read_timeout 300s;    # 5 minutes for file uploads
+        proxy_read_timeout 300s; # 5 minutes for file uploads
         proxy_send_timeout 300s;
-        client_max_body_size 100m;  # Match Prosody file size limit
-        
+        client_max_body_size 100m; # Match Prosody file size limit
+
         # Upload optimizations
         proxy_request_buffering off;
         proxy_buffering off;
@@ -131,16 +129,16 @@ server {
     location /admin {
         proxy_pass http://prosody_http/admin;
         proxy_http_version 1.1;
-        
+
         # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # Admin interface timeouts
         proxy_read_timeout 300s;
         proxy_send_timeout 300s;
-        
+
         # Security: Restrict access to admin interface
         # allow 192.168.1.0/24;  # Your admin network
         # deny all;
@@ -152,11 +150,11 @@ server {
     location /metrics {
         proxy_pass http://prosody_http/metrics;
         proxy_http_version 1.1;
-        
+
         # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        
+
         # Security: Restrict access to metrics
         # allow 127.0.0.1;       # Local monitoring
         # allow 192.168.1.0/24;  # Monitoring network
@@ -169,11 +167,11 @@ server {
     location /files {
         proxy_pass http://prosody_http/files;
         proxy_http_version 1.1;
-        
+
         # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        
+
         # Static file caching
         expires 1h;
         add_header Cache-Control "public, immutable";
@@ -185,15 +183,15 @@ server {
     location /health {
         proxy_pass http://prosody_http/health;
         proxy_http_version 1.1;
-        
+
         # Minimal timeouts for health checks
         proxy_read_timeout 10s;
         proxy_send_timeout 10s;
         proxy_connect_timeout 5s;
-        
+
         # Headers
         proxy_set_header Host $host;
-        
+
         # Allow monitoring systems
         # allow 127.0.0.1;
         # allow 192.168.1.0/24;
@@ -207,10 +205,10 @@ server {
         # Option 1: Serve a static web client
         # root /var/www/xmpp-webclient;
         # index index.html;
-        
+
         # Option 2: Redirect to web client
         # return 301 https://webclient.yourdomain.com;
-        
+
         # Option 3: Simple info page
         return 200 'XMPP Server - WebSocket endpoint: wss://yourdomain.com/xmpp-websocket';
         add_header Content-Type text/plain;
@@ -230,18 +228,18 @@ server {
     # SSL configuration (use separate certificate or wildcard)
     ssl_certificate /path/to/chat.yourdomain.com.crt;
     ssl_certificate_key /path/to/chat.yourdomain.com.key;
-    
+
     # SSL settings (same as above)
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
-    
+
     # WebSocket configuration (same as above)
     location /xmpp-websocket {
         proxy_pass http://prosody_http/xmpp-websocket;
         proxy_http_version 1.1;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Host $host;  # This will be chat.yourdomain.com
+        proxy_set_header Host $host; # This will be chat.yourdomain.com
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 900s;
@@ -259,14 +257,14 @@ server {
 upstream prosody_cluster {
     # Primary instance
     server prosody1:5280 max_fails=3 fail_timeout=30s;
-    
+
     # Secondary instances
     server prosody2:5280 max_fails=3 fail_timeout=30s backup;
     server prosody3:5280 max_fails=3 fail_timeout=30s backup;
-    
+
     # Health check (requires nginx-plus or custom module)
     # health_check interval=30s;
-    
+
     # Session persistence (if needed)
     # ip_hash;
 }
@@ -283,4 +281,4 @@ limit_req_zone $binary_remote_addr zone=general:10m rate=100r/m;
 # location /xmpp-websocket {
 #     limit_req zone=websocket burst=5 nodelay;
 #     # ... other WebSocket configuration
-# } 
+# }
