feat(public-server): implement comprehensive public server best practices
- Add complete public server configuration based on official Prosody docs
- Include all required modules: register, watchregistrations, block_registrations,
  server_contact_info, limits, firewall, mimicking, tombstones, muc_limits
- Implement production rate limiting examples from documentation (3kb/s c2s, 30kb/s s2s)
- Add comprehensive blocked username list to prevent abuse
- Configure abuse reporting contacts and RFC 3912 xmpp@ contact
- Add systemd file descriptor limit configuration for scalability
- Include MUC flood prevention and content filtering rules
- Add backup and monitoring considerations
- Update environment example with public server specific settings
- Reference official documentation: https://prosody.im/doc/public_servers

--- a/examples/env.example
+++ b/examples/env.example
@@ -106,11 +106,36 @@ PROSODY_OUTAGE_CONTACT=admin@example.com
 PROSODY_STATUS_URL=https://status.example.com
 
 # ============================================================================
-# REGISTRATION SETTINGS
+# REGISTRATION SETTINGS (PUBLIC SERVER BEST PRACTICES)
 # ============================================================================
 
 # Allow user registration (recommended: false for production)
 PROSODY_ALLOW_REGISTRATION=false
+
+# Invitation-only registration (recommended: true for public servers)
+PROSODY_INVITE_ONLY=true
+
+# Registration rate limiting (per-IP)
+# "Spammers have lots of IP addresses and lots of time, so this limit alone is not enough"
+PROSODY_REG_THROTTLE_PERIOD=300          # Minimum seconds between registrations (5 minutes)
+PROSODY_REG_THROTTLE_MAX=3               # Maximum registrations per period
+PROSODY_REG_THROTTLE_WINDOW=3600         # Rate limiting window (1 hour)
+
+# ============================================================================
+# CONTACT INFORMATION (RFC 3912 & XEP-0128)
+# ============================================================================
+
+# Administrative contacts (used for abuse reporting and server info)
+PROSODY_ADMIN_EMAIL=admin@example.com
+PROSODY_SUPPORT_EMAIL=support@example.com
+PROSODY_ABUSE_EMAIL=abuse@example.com     # CRITICAL for public servers
+PROSODY_SECURITY_EMAIL=security@example.com
+
+# Contact URLs
+PROSODY_CONTACT_URL=https://example.com/contact
+PROSODY_SUPPORT_URL=https://example.com/support
+PROSODY_ABUSE_URL=https://example.com/report-abuse
+PROSODY_STATUS_URL=https://status.example.com
 
 # ============================================================================
 # DATABASE CONFIGURATION
@@ -133,20 +158,24 @@ PROSODY_DB_MAX_CONNECTIONS=20
 PROSODY_DB_TIMEOUT=30
 
 # ============================================================================
-# PERFORMANCE SETTINGS
+# PERFORMANCE SETTINGS (PUBLIC SERVER OPTIMIZED)
 # ============================================================================
 
-# Client connection rate limiting
-PROSODY_C2S_RATE=10kb/s
-PROSODY_C2S_BURST=25kb
+# Client connection rate limiting (from Prosody public server production example)
+PROSODY_C2S_RATE=3kb/s                   # Production example from documentation
+PROSODY_C2S_BURST=2s                     # Production example from documentation
 
-# Server connection rate limiting
-PROSODY_S2S_RATE=30kb/s
-PROSODY_S2S_BURST=100kb
+# Server connection rate limiting (from Prosody public server production example)
+PROSODY_S2S_RATE=30kb/s                  # Production example from documentation
+PROSODY_S2S_BURST=3s                     # Production example from documentation
+
+# Connection limits
+PROSODY_MAX_CLIENTS=10000                # Maximum total client connections
+PROSODY_MAX_CONNECTIONS_PER_IP=5         # Maximum connections per IP address
 
 # Stanza size limits (XMPP Safeguarding Manifesto compliance)
-PROSODY_C2S_STANZA_LIMIT=262144
-PROSODY_S2S_STANZA_LIMIT=524288
+PROSODY_C2S_STANZA_LIMIT=262144          # 256KB max stanza size
+PROSODY_S2S_STANZA_LIMIT=524288          # 512KB max stanza size for s2s
 
 # Garbage collection settings
 PROSODY_GC_MODE=incremental
@@ -164,61 +193,68 @@ PROSODY_LOG_LEVEL=info
 PROSODY_LOG_FORMAT=default
 
 # ============================================================================
-# SECURITY SETTINGS
+# SECURITY SETTINGS (PUBLIC SERVER ANTI-ABUSE)
 # ============================================================================
 
-# Anti-spam threshold (messages before action)
-PROSODY_SPAM_THRESHOLD=3
+# Authentication failure limits
+PROSODY_FAILED_AUTH_THRESHOLD=5          # Maximum failed authentication attempts
+PROSODY_FAILED_AUTH_WINDOW=300           # Time window for failed attempts (5 minutes)
 
-# Spam notification recipient
-PROSODY_SPAM_NOTIFICATION=admin@example.com
-
-# Failed authentication threshold
-PROSODY_FAILED_AUTH_THRESHOLD=5
-PROSODY_FAILED_AUTH_WINDOW=300
-
-# Maximum connections per IP
-PROSODY_MAX_CONNECTIONS_PER_IP=10
+# Anti-spam and abuse prevention
+PROSODY_SPAM_THRESHOLD=3                 # Messages before spam action
+PROSODY_SPAM_NOTIFICATION=admin@example.com  # Spam alert recipient
 
 # Firewall rate limiting
-PROSODY_FIREWALL_C2S_RATE=10/60
-PROSODY_FIREWALL_S2S_RATE=30/60
+PROSODY_FIREWALL_C2S_RATE=10/60          # 10 per minute for client connections
+PROSODY_FIREWALL_S2S_RATE=30/60          # 30 per minute for server connections
+
+# DNS Blocklist settings (requires mod_firewall)
+PROSODY_ENABLE_DNSBL=true                # Enable DNS blocklist checking
+PROSODY_DNSBL_ACTION=reject              # Action: reject, log, throttle
+
+# Content filtering
+PROSODY_MAX_MESSAGE_LENGTH=10000         # Maximum message length (10KB)
+PROSODY_MAX_RECIPIENTS_PER_MESSAGE=50    # Maximum recipients per message
 
 # ============================================================================
-# MESSAGE ARCHIVE MANAGEMENT (MAM)
+# MUC (MULTI-USER CHAT) LIMITS
 # ============================================================================
 
-# Archive policy: always, never, roster
-PROSODY_ARCHIVE_POLICY=roster
-
-# Archive expiration: 1y, 6m, 90d, etc.
-PROSODY_ARCHIVE_EXPIRE=1y
-
-# Maximum results per archive query
-PROSODY_ARCHIVE_MAX_RESULTS=50
+# MUC flood prevention (mod_muc_limits)
+PROSODY_MUC_MAX_MESSAGES_PER_MINUTE=30   # Message rate limit in chat rooms
+PROSODY_MUC_MAX_PRESENCE_PER_MINUTE=20   # Presence update rate limit
+PROSODY_MUC_MAX_PARTICIPANTS=200         # Maximum participants per room
+PROSODY_MAX_ROOMS_PER_USER=10            # Maximum rooms a user can create
 
 # ============================================================================
-# MULTI-USER CHAT (MUC) SETTINGS
+# SCALABILITY SETTINGS
 # ============================================================================
 
-# MUC log expiration
-PROSODY_MUC_LOG_EXPIRE=1y
+# File descriptor limits (see examples/systemd-nofile.conf)
+PROSODY_RECOMMENDED_NOFILE=1048576       # 1M file descriptors for large servers
 
-# MUC history message count
-PROSODY_MUC_HISTORY=50
-
-# Default MUC room visibility
-PROSODY_MUC_DEFAULT_PUBLIC=false
+# Connection optimization
+PROSODY_TCP_NODELAY=true                 # Enable TCP_NODELAY for low latency
+PROSODY_TCP_KEEPALIVE=true               # Enable TCP keepalive
 
 # ============================================================================
-# HTTP UPLOAD SETTINGS (if PROSODY_ENABLE_HTTP=true)
+# BACKUP AND MONITORING
 # ============================================================================
 
-# Maximum file size in bytes (10MB = 10485760)
-PROSODY_UPLOAD_SIZE_LIMIT=10485760
+# Backup settings
+PROSODY_BACKUP_ENABLED=true              # Enable automated backups
+PROSODY_BACKUP_FREQUENCY=daily           # Backup frequency
+PROSODY_BACKUP_RETENTION=30d             # Backup retention period
 
-# File expiration in seconds (30 days = 2592000)
-PROSODY_UPLOAD_EXPIRE=2592000
+# Monitoring thresholds
+PROSODY_ALERT_MAX_CONNECTIONS=9000       # Alert when approaching connection limit
+PROSODY_ALERT_HIGH_ERROR_RATE=0.05       # Alert on 5% error rate
+PROSODY_ALERT_MEMORY_USAGE=0.85          # Alert on 85% memory usage
+PROSODY_ALERT_DISK_USAGE=0.90            # Alert on 90% disk usage
+
+# Health check URLs
+PROSODY_HEALTH_CHECK_URL=https://status.example.com/prosody
+PROSODY_METRICS_URL=https://monitoring.example.com/prosody
 
 # ============================================================================
 # PORT CONFIGURATION
