feat(docker): add all recommended Prosody dependencies
- Add lua-unbound for secure DNS lookups (recommended)
- Add lua-readline for console history/editing (recommended)
- Add luarocks for plugin management (recommended)
- Add lua-sqlite3 as alternative SQLite support
- Enhance build stage with development headers
- Add dependency verification during build
- Configure LuaRocks for Lua 5.4
- Document all dependencies with official references

Resolves compatibility with all Prosody features and enables
plugin installation via prosodyctl.

Ref: https://prosody.im/doc/depends

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,12 @@
 # Professional Prosody XMPP Server Docker Image
 # Based on analysis of 42+ XMPP implementations
 # Combines security-first approach with modern optimization
+#
+# Updated with all recommended Prosody dependencies:
+# - All required dependencies (Lua 5.4, LuaSocket, LuaSec, LuaFileSystem, LuaExpat)
+# - Recommended dependencies (LuaUnbound, LuaReadline, LuaEvent, LuaRocks)
+# - Optional dependencies for enhanced functionality (SQL drivers, BitOp, etc.)
+# Reference: https://prosody.im/doc/depends
 
 # Build stage - Community modules and dependencies
 FROM debian:bookworm-slim AS builder
@@ -14,11 +20,18 @@ RUN apt-get update && apt-get install -y \
     libexpat1-dev \
     libidn2-dev \
     libicu-dev \
+    libunbound-dev \
+    libevent-dev \
+    libreadline-dev \
+    libsqlite3-dev \
+    libpq-dev \
+    libmysqlclient-dev \
     mercurial \
     git \
     ca-certificates \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    luarocks &&
+    rm -rf /var/lib/apt/lists/*
 
 # Clone community modules
 RUN hg clone https://hg.prosody.im/prosody-modules/ /opt/prosody-modules
@@ -35,35 +48,80 @@ LABEL maintainer="XMPP Admin <admin@domain.com>"
 LABEL description="Professional Prosody XMPP Server"
 LABEL version="1.0.0"
 
-# Install runtime dependencies
-RUN apt-get update && apt-get install -y \
-    # Core Prosody and Lua
-    prosody \
+# Install runtime dependencies based on Prosody documentation
+# Reference: https://prosody.im/doc/depends
+#
+# REQUIRED DEPENDENCIES:
+# - lua5.4: Runtime for majority of Prosody code (Lua 5.4 recommended)
+# - lua-sec: SSL/TLS support (version 0.7+)
+# - lua-socket: Network connections (version 3.x)
+# - lua-filesystem: Data store management (version 1.6.2+)
+# - lua-expat: XML/XMPP stream parsing (version 1.2.x+, 1.4.x+ recommended)
+#
+# RECOMMENDED DEPENDENCIES:
+# - lua-unbound: Secure asynchronous DNS lookups (version 0.5+)
+# - lua-readline: Console history and editing capabilities
+# - lua-event: Efficient scaling for hundreds+ concurrent connections
+# - luarocks: Plugin installer (version 2.x, 3.x recommended)
+#
+# OPTIONAL DEPENDENCIES:
+# - lua-dbi-*: SQL database support (version 0.6+)
+# - lua-sql-sqlite3: Alternative SQLite3 support to LuaDBI
+# - lua-bitop: Bit manipulation (for mod_websocket)
+# - lua-zlib: Compression support
+RUN apt-get update && apt-get install -y
+# Core Prosody and Lua
+prosody \
     lua5.4 \
-    liblua5.4-0 \
-    # Database drivers
-    lua-dbi-postgresql \
-    lua-dbi-mysql \
-    lua-dbi-sqlite3 \
-    # Security and networking
-    lua-sec \
+    liblua5.4-0
+# Required dependencies for XMPP functionality
+lua-sec \
     lua-socket \
-    lua-bitop \
-    lua-event \
-    lua-zlib \
     lua-filesystem \
-    lua-expat \
-    # System utilities
-    ca-certificates \
+    lua-expat
+# Database drivers (Optional but recommended for SQL storage)
+lua-dbi-postgresql \
+    lua-dbi-mysql \
+    lua-dbi-sqlite3
+# SQLite3 support (alternative to LuaDBI for SQLite)
+lua-sqlite3
+# Recommended dependencies for enhanced functionality
+lua-unbound \
+    lua-readline \
+    lua-event \
+    lua-bitop \
+    lua-zlib
+# Plugin management
+luarocks
+# System utilities
+ca-certificates \
     openssl \
     curl \
-    dnsutils \
-    # Process management
-    tini \
-    # Monitoring tools
-    procps \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    dnsutils
+# Process management
+tini
+# Monitoring tools
+procps &&
+    rm -rf /var/lib/apt/lists/* &&
+    apt-get clean
+
+# Verify critical dependencies are installed with proper versions
+RUN echo "Verifying Prosody dependencies..." &&
+    lua5.4 -e "print('Lua ' .. _VERSION .. ' - OK')" &&
+    lua5.4 -e "require('socket'); print('LuaSocket - OK')" &&
+    lua5.4 -e "require('ssl'); print('LuaSec - OK')" &&
+    lua5.4 -e "require('lfs'); print('LuaFileSystem - OK')" &&
+    lua5.4 -e "require('lxp'); print('LuaExpat - OK')" &&
+    lua5.4 -e "pcall(require, 'unbound') and print('LuaUnbound - OK') or print('LuaUnbound - Not available but optional')" &&
+    lua5.4 -e "pcall(require, 'readline') and print('LuaReadline - OK') or print('LuaReadline - Not available but optional')" &&
+    lua5.4 -e "pcall(require, 'event') and print('LuaEvent - OK') or print('LuaEvent - Not available but optional')" &&
+    lua5.4 -e "pcall(require, 'bit') and print('BitOp - OK') or print('BitOp - Not available but optional')" &&
+    prosody --version
+
+# Configure LuaRocks for Prosody plugin management
+RUN luarocks config lua_version 5.4 &&
+    luarocks config variables.LUA_INCDIR /usr/include/lua5.4 &&
+    luarocks config variables.LUA_LIBDIR /usr/lib/x86_64-linux-gnu
 
 # Copy community modules from builder
 COPY --from=builder /opt/prosody-modules /opt/prosody-modules
@@ -81,8 +139,8 @@ RUN mkdir -p \
     /var/lib/prosody/data \
     /var/lib/prosody/uploads \
     /var/log/prosody \
-    /opt/prosody/scripts \
-    && chown -R prosody:prosody \
+    /opt/prosody/scripts &&
+    chown -R prosody:prosody \
         /etc/prosody \
         /var/lib/prosody \
         /var/log/prosody
@@ -108,14 +166,14 @@ RUN chmod +x /opt/prosody/scripts/*.sh
 RUN chown -R prosody:prosody /etc/prosody /var/lib/prosody /var/log/prosody
 
 # Create log files with proper permissions
-RUN touch /var/log/prosody/prosody.log /var/log/prosody/error.log \
-    && chown prosody:prosody /var/log/prosody/*.log
+RUN touch /var/log/prosody/prosody.log /var/log/prosody/error.log &&
+    chown prosody:prosody /var/log/prosody/*.log
 
 # Expose ports
-EXPOSE 5222/tcp  # Client connections (C2S)
-EXPOSE 5269/tcp  # Server connections (S2S)
-EXPOSE 5280/tcp  # HTTP (BOSH, WebSocket, file upload)
-EXPOSE 5281/tcp  # HTTPS (secure HTTP services)
+EXPOSE 5222/tcp # Client connections (C2S)
+EXPOSE 5269/tcp # Server connections (S2S)
+EXPOSE 5280/tcp # HTTP (BOSH, WebSocket, file upload)
+EXPOSE 5281/tcp # HTTPS (secure HTTP services)
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
@@ -144,4 +202,4 @@ FROM runtime AS armv7
 # ARMv7 specific optimizations if needed
 
 # Default to runtime stage
-FROM runtime 
+FROM runtime
